manifests/tekton-workloads/event-listeners/homelab-kube-cluster/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homelab-kube-cluster
  labels:
    name: homelab-kube-cluster
