manifests/tekton-workloads/event-listeners/homelab-kube-cluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homelab-kube-cluster
  namespace: homelab-kube-cluster
spec:
  tls:
  - hosts:
    - tekton-el.homelab.danmanners.com
  rules:
  - host: tekton-el.homelab.danmanners.com
    http:
      paths:
      - path: /github.com/danmanners/homelab-kube-cluster
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
